--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-10 form-container">
-                <h2 class="text-center mb-4">Lino APOLLO</h2>
+                <h2 class="text-center mb-4">Lino</h2>
                 
                 <form id="productForm" class="mb-4">
                     <div class="row g-3">
@@ -97,10 +97,6 @@
     <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database.js"></script>
 
     <script>
-        // Importando os módulos necessários do Firebase
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
-        import { getDatabase, ref, set, get, child, remove } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-database.js";
-
         // Configuração do Firebase
         const firebaseConfig = {
             apiKey: "AIzaSyAuKapVSN3xzNydWnTYFyF74tWep6KSfOk",
@@ -113,8 +109,8 @@
         };
 
         // Inicializando o Firebase
-        const app = initializeApp(firebaseConfig);
-        const database = getDatabase(app);
+        firebase.initializeApp(firebaseConfig);
+        const database = firebase.database();
 
         // Função para salvar os dados no Firebase
         document.getElementById('productForm').addEventListener('submit', function (e) {
@@ -123,9 +119,9 @@
             const produto = document.getElementById('produto').value.toUpperCase();
             const repeticao = document.getElementById('repeticao').value;
             const chagrim = document.getElementById('chagrim').value;
-            const corte = parseFloat(document.getElementById('corte').value);
+            const corte = parseFloat(document.getElementById('corte').value) || 0;
             const velocidade = document.getElementById('velocidade').value;
-            const perimetro = parseFloat(document.getElementById('perimetro').value);
+            const perimetro = parseFloat(document.getElementById('perimetro').value) || 0;
             const observacoes = document.getElementById('observacoes').value;
 
             const newProduct = {
@@ -137,7 +133,7 @@
                 observacoes: [observacoes],
             };
 
-            set(ref(database, 'products/' + produto), newProduct)
+            firebase.database().ref('products/' + produto).set(newProduct)
                 .then(() => {
                     showSuccessMessage();
                     updateProductSelect();
@@ -159,39 +155,43 @@
         // Função para atualizar o select de produtos
         function updateProductSelect() {
             const productSelect = document.getElementById('productSelect');
-            get(child(ref(database), 'products')).then(snapshot => {
-                if (snapshot.exists()) {
-                    const products = snapshot.val();
-                    productSelect.innerHTML = '<option value="">Selecione um produto</option>';
-                    for (let key in products) {
-                        productSelect.innerHTML += `<option value="${key}">${key}</option>`;
+            firebase.database().ref('products').once('value')
+                .then(snapshot => {
+                    if (snapshot.exists()) {
+                        const products = snapshot.val();
+                        productSelect.innerHTML = '<option value="">Selecione um produto</option>';
+                        for (let key in products) {
+                            productSelect.innerHTML += `<option value="${key}">${key}</option>`;
+                        }
                     }
-                }
-            }).catch(error => {
-                console.error('Erro ao carregar os produtos:', error);
-            });
+                })
+                .catch(error => {
+                    console.error('Erro ao carregar os produtos:', error);
+                });
         }
 
         // Função para exibir detalhes do produto selecionado
         document.getElementById('productSelect').addEventListener('change', function () {
             const produto = this.value;
             if (produto) {
-                get(child(ref(database), 'products/' + produto)).then(snapshot => {
-                    if (snapshot.exists()) {
-                        const product = snapshot.val();
-                        document.getElementById('productDetails').innerHTML = `
-                            <p><strong>Repetição:</strong> ${product.repeticao}</p>
-                            <p><strong>Corte:</strong> ${product.corte}</p>
-                            <p><strong>Velocidade:</strong> ${product.velocidade}</p>
-                            <p><strong>Perímetro:</strong> ${product.perimetro}</p>
-                            <p><strong>Chagrim:</strong> ${product.chagrim}</p>
-                            <p><strong>Observações:</strong> ${product.observacoes.join(', ')}</p>
-                        `;
-                        document.getElementById('deleteProduct').style.display = 'block';
-                    }
-                }).catch(error => {
-                    console.error('Erro ao carregar detalhes do produto:', error);
-                });
+                firebase.database().ref('products/' + produto).once('value')
+                    .then(snapshot => {
+                        if (snapshot.exists()) {
+                            const product = snapshot.val();
+                            document.getElementById('productDetails').innerHTML = `
+                                <p><strong>Repetição:</strong> ${product.repeticao}</p>
+                                <p><strong>Corte:</strong> ${product.corte}</p>
+                                <p><strong>Velocidade:</strong> ${product.velocidade}</p>
+                                <p><strong>Perímetro:</strong> ${product.perimetro}</p>
+                                <p><strong>Chagrim:</strong> ${product.chagrim}</p>
+                                <p><strong>Observações:</strong> ${product.observacoes.join(', ')}</p>
+                            `;
+                            document.getElementById('deleteProduct').style.display = 'block';
+                        }
+                    })
+                    .catch(error => {
+                        console.error('Erro ao carregar detalhes do produto:', error);
+                    });
             } else {
                 document.getElementById('productDetails').innerHTML = '';
                 document.getElementById('deleteProduct').style.display = 'none';
@@ -202,7 +202,7 @@
         document.getElementById('deleteProduct').addEventListener('click', function () {
             const produto = document.getElementById('productSelect').value;
             if (produto && confirm('Tem certeza que deseja excluir este produto?')) {
-                remove(ref(database, 'products/' + produto))
+                firebase.database().ref('products/' + produto).remove()
                     .then(() => {
                         updateProductSelect();
                         document.getElementById('productDetails').innerHTML = '';
