--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-10 form-container">
-                <h2 id="formulário-de-produto" class="text-center mb-4">Lino Apollo</h2>
+                <h2 id="formulário-de-produto" class="text-center mb-4">Lino</h2>
                 
                 <form id="productForm">
                     <div class="row mb-3">
