--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
     <script>
         // Inicialize o cliente Supabase com suas próprias credenciais (URL e Key)
-        const supabaseUrl = 'https://<seu-projeto>.supabase.co';
-        const supabaseKey = 'sua-chave-api';
+        const supabaseUrl = 'https://tphqgrhjuxzgfbvoetlx.supabase.co';
+        const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRwaHFncmhqdXh6Z2Zidm9ldGx4Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3MjY2MDc4NDgsImV4cCI6MjA0MjE4Mzg0OH0.mjmTC1jLp0eU5_KFYeZSnvaI0EqRNIYdAsxT3ZFC2A0';
         const supabase = supabase.createClient(supabaseUrl, supabaseKey);
 
         // Função para carregar produtos do Supabase
