--- a/index.html
+++ b/index.html
@@ -8,41 +8,43 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css" rel="stylesheet">
     <style>
         body {
-            position: relative;
+            background: url('https://source.unsplash.com/random/1920x1080/?abstract') no-repeat center center fixed;
             background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
-            background-attachment: fixed;
             min-height: 100vh;
             padding-top: 2rem;
             padding-bottom: 2rem;
-        }
-        body::before {
-            content: '';
-            position: fixed;
-            top: 0;
-            right: 0;
-            bottom: 0;
-            left: 0;
-            background: inherit;
-            filter: blur(5px);
-            z-index: -1;
+            font-family: 'Arial', sans-serif;
+            color: #333;
         }
         .form-container {
-            background-color: rgba(248, 249, 250, 0.9);
+            background-color: rgba(255, 255, 255, 0.9);
             padding: 2rem;
             border-radius: 15px;
-            box-shadow: 0 0 20px rgba(0,0,0,0.1);
+            box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+            margin-bottom: 2rem;
         }
-        .delete-comment {
-            cursor: pointer;
-            color: #dc3545;
-            margin-left: 10px;
+        .form-container h2 {
+            color: #007bff;
         }
-        .form-control-sm {
-            height: calc(1.5em + 0.5rem + 2px);
-            padding: 0.25rem 0.5rem;
-            font-size: 0.875rem;
+        .form-container input, .form-container select, .form-container button {
+            border-radius: 10px;
+            margin-bottom: 1rem;
+        }
+        .form-container button {
+            margin-top: 1rem;
+        }
+        #productDetails {
+            background-color: #f8f9fa;
+            border: 1px solid #ddd;
+            border-radius: 10px;
+            padding: 1rem;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+        }
+        #successMessage {
+            display: none;
+        }
+        #productSelect {
+            margin-bottom: 1rem;
         }
     </style>
 </head>
@@ -50,11 +52,11 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-10 form-container">
-                <h2 id="formulário-de-produto" class="text-center mb-4">APOLLO 2024</h2>
+                <h2 id="formulário-de-produto" class="text-center mb-4">Lino</h2>
                 
                 <form id="productForm" class="mb-4">
                     <div class="row g-3">
-                        <!-- Produto (sempre em uma linha separada) -->
+                        <!-- Produto -->
                         <div class="col-12 col-md-6">
                             <input type="text" class="form-control" id="produto" placeholder="Produto" required>
                         </div>
@@ -82,7 +84,7 @@
                             </select>
                         </div>
                         
-                        <!-- Observações (sempre em uma linha separada) -->
+                        <!-- Observações -->
                         <div class="col-12">
                             <input type="text" class="form-control" id="observacoes" placeholder="Observações">
                         </div>
@@ -92,7 +94,7 @@
                     </div>
                 </form>
 
-                <div id="successMessage" class="alert alert-success mt-3" role="alert" style="display: none;">
+                <div id="successMessage" class="alert alert-success mt-3" role="alert">
                     Dados salvos com sucesso!
                 </div>
 
@@ -205,7 +207,6 @@
                 let observacoesHtml = product.observacoes.map((obs, index) => 
                     `<p>${index + 1}. ${obs} <span class="delete-comment" data-index="${index}">❌</span></p>`
                 ).join('');
-
                 productDetails.html(`
                     <h4>${this.value}</h4>
                     <p><strong>Repetição:</strong> ${product.repeticao}</p>
@@ -219,6 +220,7 @@
                 productDetails.show();
                 deleteButton.show();
 
+                // Preencher o formulário com os dados do produto selecionado
                 $('#produto').val(this.value);
                 $('#repeticao').val(product.repeticao);
                 $('#chagrim').val(product.chagrim);
