--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             padding-bottom: 2rem;
             font-family: 'Arial', sans-serif;
             color: #333;
+            opacity:0.7;
         }
         .form-container {
             background-color: rgba(255, 255, 255, 0.9);
