--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             padding-bottom: 2rem;
             font-family: 'Arial', sans-serif;
             color: #333;
-            opacity:0.7;
+            opacity:0.4;
         }
         .form-container {
             background-color: rgba(255, 255, 255, 0.9);
@@ -53,7 +53,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-10 form-container">
-                <h2 id="formulário-de-produto" class="text-center mb-4">Lino</h2>
+                <h2 id="formulário-de-produto" class="text-center mb-4">APOLLO 2024</h2>
                 
                 <form id="productForm" class="mb-4">
                     <div class="row g-3">
